--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,11 @@ backports.zoneinfo==0.2.1
 Django==4.2.14
 sqlparse==0.5.1
 typing-extensions==4.12.2
+asgiref==3.8.1
+backports.zoneinfo==0.2.1
+chardet==5.2.0
+Django==4.2.14
+pillow==10.4.0
+reportlab==4.2.2
+sqlparse==0.5.1
+typing-extensions==4.12.2
