--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 asgiref==3.8.1
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 Django==4.2.15
 sqlparse==0.5.1
 typing-extensions==4.12.2
 asgiref==3.8.1
-backports.zoneinfo==0.2.1
 chardet==5.2.0
 Django==4.2.15
 pillow==10.4.0
